@@ -5,3 +5,18 @@
 # *-build subpackage).
 
 %postgresql_major @PGMAJORVERSION@
+
+%_pgtests_tests_lib "@PKG_TESTS_LIB@"
+
+# Initialize the PostgreSQL tests environment.  This is supposed to be invoked
+# in prep/build/install (where you plan to run the testsuite), while it defines
+# several useful shell variables and provies useful commands.  Effect of this
+# command end with shell exit.
+%pgtests_init . %_pgtests_tests_lib
+
+# Start the testing postgresql server, setting the actual unix user to be the
+# PostgreSQL admin.  The $PGHOST/$PGPORT are set appropriately, so psql is able
+# to run without passwords.  This also sets shell exit trap callback so that if
+# something goes wrong and package build fails, the temporary database is
+# automatically cleaned up.
+%pgtests_start pgtests_start
