@@ -1,16 +1,24 @@
 lib		= %D%/library.sh
 lib_in		= $(srcdir)/$(lib).in
 
+pkg_tests_base	= postgresql_pkg_tests.sh
+pkg_tests	= %D%/$(pkg_tests_base)
+
+_AX_TEXT_ADDITIONAL_SED_SUBSTITUTIONS += \
+		-e 's|@PKG_TESTS_LIB@|$(rawpkgdatadir)/$(pkg_tests_base)|'
+
 rawdata_generated_files = \
 	$(lib)
 
 rawdata_template_files = \
 	$(lib_in)
 
-rawdata_static_files =
+rawdata_static_files = \
+	$(pkg_tests)
 
 rawpkgdata_DATA = \
-	$(rawdata_generated_files)
+	$(rawdata_generated_files) \
+	$(rawdata_static_files)
 
 GENERATED_FILES += $(rawdata_generated_files)
 EXTRA_DIST += $(rawdata_static_files) $(rawdata_template_files)
